--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-unicorn": "^50.0.1",
     "new-component": "^5.0.2",
     "postcss": "^8.4.33",
+    "postcss-import": "^16.0.0",
     "prettier": "^3.2.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
