--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "new-component": "new-component"
+    "nc": "new-component"
   },
   "dependencies": {
     "react": "^18.2.0",
